fixed width on #shop and #donate for index on mobile screen

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -202,6 +202,7 @@ there will be a sticky footer due to 'body' min-height and 'row' flex:1*/
 #shop, #donate {
   align-items: center;
   padding: 30px 0px;
+  width: 100%;
   h2 {
     margin-bottom: 20px;
   }
